# backend_Kaucja

./: .env.example  .gitignore  AGENTS.md  KORPUS_DOKUMENTOW_KAUCJA_PL.md  PLANS.md  Tech_spec_agents.md  pyproject.toml
2026-03-01__legaldocs_ingest__foundation/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt  run_iter3.py  walkthrough.md
config/: pipeline.llm_probe.yaml  pipeline.yaml
docs/: BROWSER_TESTS.md  CODEX_GUIDE.md  DEV_WORKFLOW.md  OPERATIONS.md  PAGEINDEX_RAG_PLAN_RU.md  RELEASE_CHECKLIST.md  SETUP.md  TECH_SPEC_MVP.md  TechSpec_LegalDocs_Ingest_Pipeline.md  Tech_spec_3.1.md  USER_GUIDE_RU.md  iteration_28_go_live_hardening.md  iteration_29_final_user_operable_release.md  iteration_32_api_foundation.md  iteration_33_api_contract_alignment.md  iteration_34_pipeline_mapper_integration.md  iteration_35_backend_hardening.md  iteration_36_backend_error_mapping_fix.md  iteration_63_e2e_assertion_truthfulness_reconciliation.md  iteration_69_release_cutover.md  iteration_70_final_release_handover.md  iteration_71_release_finalization.md  iteration_72_release_provenance.md  iteration_73_release_receipt.md  iteration_74_working_runtime_designation.md  normadepo_pipeline_runbook.md
fixtures/: README.md
legal_docs_pipeline/: __init__.py  batch.py  batch_cli.py  batch_repository.py  batch_runner.py  canonicalize.py  cli.py  config.py  constants.py  costs.py  language.py  llm.py  logging.py  parser.py  pipeline.py  prompts.py  reader.py  repository.py  router.py  scanner.py  schemas.py
legal_ingest/: __main__.py  audit.py  backup.py  (+13 more)
(+745 files in other folders)
