[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-kaucja"
version = "0.1.0"
description = "Kaucja Case Sandbox backend MVP"
readme = "AGENTS.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.0.0",
    "google-genai>=1.33.0",
    "jsonschema>=4.23.0",
    "mistralai>=1.2.0",
    "openai>=1.99.0",
    "pydantic-settings>=2.2.1",
    "pymupdf>=1.24.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
